# python-practicum

./: Homework1.ipynb  Homework10.ipynb  Homework11.ipynb  Homework2.ipynb  Homework3.ipynb  Homework4.ipynb  Homework5.ipynb  Homework6.ipynb  Homework7.ipynb  Homework8.ipynb  Homework9.ipynb  README.md  testfile.txt
OpenCV/Homework1/Project1/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project3/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project4/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project5/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project6/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
OpenCV/Homework1/Project7/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
files/: MTLRP_201101_211031.txt  MTLR_180101_190110.txt
